@@ -20,9 +20,9 @@ license: |
 ---
 
 Apache Fory Java provides high-performance binary object serialization. Use xlang mode for payloads
-shared with other supported runtimes and native mode for Java/JVM-only object graphs.
+shared across Fory implementation families and native mode for JVM-family object graphs.
 
-This runtime guide is scoped to Binary Object Serialization. For other Java products, use
+This Java guide is scoped to Binary Object Serialization. For other Java capabilities, use
 [Row Format](../../row-format/java.md), [Fory JSON](../../json/index.md),
 [Fory IDL and compiler](../../compiler/index.md), or [Fory gRPC](../../grpc/java.md).
 
@@ -63,7 +63,7 @@ or later.
 <dependency>
   <groupId>org.apache.fory</groupId>
   <artifactId>fory-core</artifactId>
-  <version>1.5.0</version>
+  <version>1.6.0</version>
 </dependency>
 ```
 
@@ -71,13 +71,15 @@ or later.
 
 ```kotlin
 // Binary object serialization
-implementation("org.apache.fory:fory-core:1.5.0")
+implementation("org.apache.fory:fory-core:1.6.0")
 ```
 
 #### JDK 25 and Later
 
-On JDK 25 and later, open `java.lang.invoke` to Fory. Use `ALL-UNNAMED` when Fory is on
-the classpath:
+On JDK 25 and later, opening `java.lang.invoke` to Fory core is also recommended. It avoids
+the current-JDK Unsafe fallback and is required when Unsafe access is disabled or unavailable,
+including with `--sun-misc-unsafe-memory-access=deny`. Use `ALL-UNNAMED` when Fory is on the
+classpath:
 
 ```bash
 --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
@@ -169,7 +171,7 @@ Use xlang mode for cross-language payloads and schemas shared with non-Java impl
 
 Use native mode for Java-only traffic. Native mode is selected with `.withXlang(false)` and owns Java-specific object behavior such as JDK serialization hooks, `Externalizable`, dynamic object graphs, object copy, and Java native-mode zero-copy buffers. It is optimized for the JVM type system and supports a broader Java object surface than xlang mode. Compatible mode is enabled by default. Set `.withCompatible(false)` only when every reader and writer uses the same class schema and you want faster serialization and smaller size. If you are replacing JDK serialization, Kryo, FST, Hessian, or Java-only Protocol Buffers payloads, start with native mode.
 
-See [Native Serialization](native.md) for Java-only serialization details and [Xlang Serialization](xlang.md) for Java xlang registration and interoperability rules.
+See [Native Serialization](native.md) for Java-only serialization details and [Cross-Language Interoperability](basic-serialization.md#cross-language-interoperability) for Java xlang registration and interoperability rules.
 
 ### Thread Safety
 
@@ -257,10 +259,10 @@ model-discovery workflows differ from Fory Core.
 
 | Group                  | Pages                                                                                                                                                                                                                                                             |
 | ---------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| Serialization modes    | [Xlang](xlang.md), [Native](native.md)                                                                                                                                                                                                                            |
-| Common                 | [Core API](core-api.md), [Configuration](configuration.md), [Type Registration](type-registration.md), [Schema Evolution](schema-evolution.md), [Schema Metadata](schema-metadata.md), [Custom Serializers](custom-serializers.md)                                |
+| Serialization modes    | [Basic Serialization](basic-serialization.md), [Native Serialization](native.md)                                                                                                                                                                                  |
+| Common                 | [Configuration](configuration.md), [Type Registration](type-registration.md), [Schema Evolution](schema-evolution.md), [Schema Metadata](schema-metadata.md), [Custom Serializers](custom-serializers.md)                                                         |
 | Java-specific features | [Advanced Features](advanced-features.md), [Compression](compression.md), [Object Copy](object-copy.md), [JDK Custom Serialization](jdk-serialization.md), [Static Generated Serializers](static-generated-serializers.md), [Virtual Threads](virtual-threads.md) |
 | Platform and operate   | [Android](android.md), [GraalVM Native Image](graalvm.md), [Troubleshooting](troubleshooting.md)                                                                                                                                                                  |
 
 Before decoding externally supplied binary payloads, read
-[Object Serialization Security](../security.md).
+[Java Security](security.md).
