@@ -49,13 +49,15 @@ See [Java Features](../java/index.md#features) for complete feature list.
 Add the dependency with sbt:
 
 ```sbt
-libraryDependencies += "org.apache.fory" %% "fory-scala" % "1.5.0"
+libraryDependencies += "org.apache.fory" %% "fory-scala" % "1.6.0"
 ```
 
 ### JDK25+
 
-Scala uses the Fory Java core when running. On JDK25+, open `java.lang.invoke` to
-Fory. Use `ALL-UNNAMED` when Fory is on the classpath:
+Scala uses the Fory Java core when running. On JDK25+, opening `java.lang.invoke` to Fory core is
+also recommended. It avoids the current-JDK Unsafe fallback and is required when Unsafe
+access is disabled or unavailable, including with `--sun-misc-unsafe-memory-access=deny`. Use
+`ALL-UNNAMED` when Fory is on the classpath:
 
 ```bash
 --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
@@ -105,7 +107,7 @@ See [Configuration](configuration.md) for Scala builder setup and [Java Native S
 Fory Scala is built on top of Fory Java. Most configuration options, features, and concepts from Fory Java apply directly to Scala. Refer to the Java documentation for:
 
 - [Configuration](../java/configuration.md) - All ForyBuilder options
-- [Basic Serialization](../java/core-api.md) - Serialization patterns and APIs
+- [Basic Serialization](../java/basic-serialization.md) - Serialization patterns and APIs
 - [Type Registration](../java/type-registration.md) - Class registration and security
 - [Schema Evolution](../java/schema-evolution.md) - Forward/backward compatibility
 - [Custom Serializers](../java/custom-serializers.md) - Implement custom serializers
@@ -118,5 +120,8 @@ Fory Scala is built on top of Fory Java. Most configuration options, features, a
 - [Native Serialization](native.md) - Serializing Scala types in JVM-native mode
 - [Schema Metadata](schema-metadata.md) - Scala annotations, references, enum IDs, and union metadata
 - [Default Values](default-values.md) - Scala class default values support
-- [Xlang Serialization](xlang.md) - Scala 3 generated models and macro-derived xlang serializers
+- [Basic Serialization](basic-serialization.md) - Models, APIs, and interoperability in the default xlang mode
 - [gRPC Support](../../grpc/scala.md) - Scala 3 generated gRPC service companions
+
+Before decoding bytes from outside the application trust boundary, read
+[Scala Security](security.md).
